Added notification for initializing java notebook kernel and minor bug fixes.